# ChangeLog for dev-db/libdbi-drivers
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/libdbi-drivers/ChangeLog,v 1.16 2006/02/25 11:54:00 robbat2 Exp $

*libdbi-drivers-0.8.1-r1 (25 Feb 2006)

  25 Feb 2006; Robin H. Johnson <robbat2@gentoo.org>
  +libdbi-drivers-0.8.1-r1.ebuild:
  Bug #104601, sqlite3 support is now controlled by a seperate use flag.

  25 Feb 2006; Robin H. Johnson <robbat2@gentoo.org>
  libdbi-drivers-0.8.0.ebuild, libdbi-drivers-0.8.1.ebuild:
  Bug 123943, IUSE cleanup.

*libdbi-drivers-0.8.1 (16 Feb 2006)

  16 Feb 2006; Karol Wojtaszek <sekretarz@gentoo.org>
  +libdbi-drivers-0.8.1.ebuild:
  Version bump

  26 Jan 2006; Patrick McLean <chutzpah@gentoo.org>
  libdbi-drivers-0.7.1-r1.ebuild:
  Stable on amd64.

  04 Jan 2006; Jeroen Roovers <jer@gentoo.org> libdbi-drivers-0.8.0.ebuild:
  Marked ~hppa (bug #105447).

  13 Nov 2005; Jason Wever <weeve@gentoo.org> libdbi-drivers-0.8.0.ebuild:
  Added ~sparc keyword wrt bug #105447.

  04 Sep 2005; Robin H. Johnson <robbat2@gentoo.org>
  libdbi-drivers-0.8.0.ebuild:
  Bug #104601 again. Make libdbi-drivers bring in both slots of sqlite.

*libdbi-drivers-0.8.0 (03 Sep 2005)

  03 Sep 2005; Robin H. Johnson <robbat2@gentoo.org>
  +libdbi-drivers-0.8.0.ebuild:
  Version bump, bug #104601.

  30 Aug 2005; Robin H. Johnson <robbat2@gentoo.org>
  libdbi-drivers-0.7.1-r1.ebuild:
  Stable on x86.

*libdbi-drivers-0.7.1-r1 (27 Mar 2005)

  27 Mar 2005; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
  +libdbi-drivers-0.7.1-r1.ebuild:
  Bug #86514, fix DEPEND. Also add metadata.

  28 Feb 2005; Christian Parpart <trapni@gentoo.org>
  libdbi-drivers-0.7.1.ebuild:
  adding to ~amd64

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> libdbi-drivers-0.7.1.ebuild:
  Add die following econf for bug 48950

  25 Mar 2004; David Holm <dholm@gentoo.org> libdbi-drivers-0.7.1.ebuild:
  Added to ~ppc.
