@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/libdbi/Attic/libdbi-0.8.1.ebuild,v 1.1 2006/02/16 16:04:02 sekretarz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/libdbi/Attic/libdbi-0.8.1.ebuild,v 1.2 2006/03/07 11:46:32 jer Exp $
 
 DESCRIPTION="libdbi implements a database-independent abstraction layer in C, similar to the DBI/DBD layer in Perl."
 SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
@@ -11,7 +11,7 @@ DEPEND=">=sys-apps/sed-4
 		${RDEPEND}"
 PDEPEND=">=dev-db/libdbi-drivers-0.8.0"
 IUSE=""
-KEYWORDS="~amd64 ~hppa ~ppc ~sparc ~x86"
+KEYWORDS="~amd64 hppa ~ppc ~sparc ~x86"
 SLOT=0
 
 src_unpack() {
