@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/libdbi
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/libdbi/ChangeLog,v 1.13 2006/02/16 16:04:02 sekretarz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/libdbi/ChangeLog,v 1.14 2006/03/07 11:46:32 jer Exp $
+
+  07 Mar 2006; Jeroen Roovers <jer@gentoo.org> libdbi-0.8.1.ebuild:
+  Stable on hppa.
 
 *libdbi-0.8.1 (16 Feb 2006)
 
