@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/libdbi-drivers
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/libdbi-drivers/ChangeLog,v 1.16 2006/02/25 11:54:00 robbat2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/libdbi-drivers/ChangeLog,v 1.17 2006/03/07 11:44:53 jer Exp $
+
+  07 Mar 2006; Jeroen Roovers <jer@gentoo.org>
+  libdbi-drivers-0.8.1-r1.ebuild:
+  Stable on hppa.
 
 *libdbi-drivers-0.8.1-r1 (25 Feb 2006)
 
